initial working auth, Still need to make signup pretty

--- a/app/src/index.html
+++ b/app/src/index.html
@@ -10,6 +10,13 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://kit.fontawesome.com/e9847e8c1d.js" crossorigin="anonymous"></script>
+  <!-- https://github.com/aws/aws-amplify/issues/678 fix: -->
+  <script>
+    if (global === undefined) {
+      var global = window;
+    }
+  </script>
+  <!-- https://github.com/aws/aws-amplify/issues/678 fix end-->
 </head>
 <body class="mat-typography">
   <app-root></app-root>
